Changed bio from third-person to first-person

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>About</h1>
-<p>Marcus Wetherell is an international school teacher originally from the United Kingdom.<p>
-<p>You can find him on <a rel="me" href="https://mastodon.social/@skypunch">Mastodon</a>.</p>
+<p>I'm an international school teacher originally from the United Kingdom.<p>
+<p>You can find me on <a rel="me" href="https://mastodon.social/@skypunch">Mastodon</a>.</p>
 </body>
 </html>
